Update CD links to open new tab and fix iTunes link alignment

--- a/css/jd3_style.css
+++ b/css/jd3_style.css
@@ -288,7 +288,7 @@ a:active {
 
 .itunes-link img {
   margin: 0;
-  padding: 0;
+  padding: 0 0 100px 0;
   width: 200px;
 }
 
